# werewolf2

./: AUTHORS.txt  CMakeLists.txt  CMakePackaging.txt  COPYING.txt  INSTALL.txt  TODO.txt  Werewolf.kdevelop  acinclude.m4  config.h.in  configure.ac
client/data/anims/: Makefile.am  idle.anim  impact.anim  lancelaboule.anim  prepaboule.anim  prepaboulecycle.anim  sphere_test_02.anim
client/data/maps/: Igloo_2.tga  Makefile.am  nevrax.tga  snowman_face.tga
client/data/shapes/: Makefile.am  PI_PO_Igloo_A.shape  appear.ps  disappear.ps  pSphere1.shape  snowball.shape
client/data/zones/: 3_AC.zonel  3_AF.zonel  3_AM.zonel  4_AJ.ig  4_AK.ig  4_AL.zonel  4_AQ.ig  5_AJ.zonel  5_AP.zonel  6_AH.ig  6_AH.zonel  6_AJ.ig  6_AK.ig  6_AN.ig  7_AM.ig  7_AN.ig  8_AD.zonel  8_AG.ig  8_AI.zonel  8_AJ.zonel  Makefile.am
client/src/: CActorProxy.h  CCameraThird.cpp  CEventListenerTest.h  CLocalObjectView.cpp  CMakeLists.txt  CSimulationImpl.cpp  CUserPaths.cpp  CWWTask.cpp  Client.rc  globals.h  main.cpp  stdpch.h
client/src/controllers/: CPlayerController.cpp
client/src/entities/: CAnimGroup.cpp  CAnimGroup.h  CAnimLayer.h  CAnimationController.h  CEntityMedia.h  CSkeleton.h
client/src/selectors/: CRandomSelector.h  CSelectorFactory.h
client/src/tasks/: C3DSwapTask.cpp  C3DTask.cpp  C3DTask.h  CAnimateTask.cpp  CBackgroundTask.cpp  CBackgroundTask.h  CConfigTask.cpp  CConfigTask.h  CGameTask.cpp  CGameTask.h  CGuiTask.cpp  CGuiTask.h  CInputTask.cpp  CInputTask.h  CIntroTask.cpp  CIntroTask.h  CLandscapeTask.cpp  CLandscapeTask.h  CNetworkTask.h  CPacsTask.cpp  CPreGameTask.cpp  CPreGameTask.h  CResourceTask.cpp  CResourceTask.h  CTimeTask.cpp
client/src/views/: CPerformerChatView.cpp
samples/entity/: CMakeLists.txt  component.h  component_container.cpp  component_factory.cpp  component_factory.h  component_health.h  entity.h  entity_def_entry.h  entity_def_manager.cpp  entity_def_manager.h  entity_event.h  entity_exceptions.h  main.cpp  property.h
samples/entity/data/: basic_trigger.entity_def  laurelin_shopkeeper.entity_def
samples/scriptcegui/: AngelScriptModule.h  CMakeLists.txt  ScriptCEGUIBindery.h  main.cpp
samples/scriptsample/: CMakeLists.txt  main.cpp
samples/scriptsample/data/: returntype.typ  script.packed_sheets
scratchpad/mattr/component_proto_1/: Makefile.am  acinclude.m4  configure.ac
server/service_frontend/: CActor.h  CCharacterManager.cpp  CCharacterManager.h  CFrontendService.cpp  CFrontendService.h  CGameEventManager.cpp  CGameEventManager.h  CMakeLists.txt  CProximityController.h  CProximityManager.cpp  CServerSimulation.cpp  CTimeTask.h  CUserManager.cpp  CUserManager.h  callbacks.cpp  service_frontend.cfg
src/server/service_frontend/: .cvsignore  CActor.h  CEventFilterTest.h  CEventListenerTest.h  CGameEventManager.cpp  CPacsTask.cpp  CPacsTask.h  CProximityController.cpp  CProximityManager.cpp  CProximityManager.h  CServerObjectView.cpp  CServerSimulation.cpp  CTimeTask.cpp  Makefile.am  Makefile.in  service_frontend.vcproj  stdpch.h
src/server/service_simple/: CFESData.cpp  CFESData.h  Makefile.am  fes_callbacks.cpp  ls_callbacks.cpp  service_simple_8.vcproj
trunk/: CMakeLists.txt  Doxyfile  HACKING.txt  LICENSE.txt  Makefile.am  README.txt  RESOURCES.txt  aclocal.m4
trunk/CMakeModules/: FindCEGUI.cmake  FindJpeg.cmake  FindMySQL.cmake  FindNeL.cmake  FindNeL3D.cmake  FindNeLGEORGES.cmake  FindNeLSOUND.cmake  nel.cmake  opennel.cmake
trunk/client/: CClientSimulation.cpp  CLocalObjectView.h  CMakeLists.txt  Client.sln  main.cpp  werewolf_default.cfg
trunk/client/Models/: CLeafClusterModel.h
trunk/client/Shapes/: CBBClusterShape.cpp
trunk/client/controllers/: CPlayerController.cpp
trunk/client/data/: Makefile.am  animationclips.packed_sheets  animgroupclip.dfn  biped.emt  gnu.emd  gnu.mesh  gnuidle.animation  gnuwalk.animation  light.mesh  meshes.packed_sheets  meshgroupmesh.dfn  sphere_guy.emd  sphere_head.mesh  sphere_test_01.animation  sphere_test_02.animation
trunk/client/entities/: IControllableMedia.cpp
trunk/client/simple_login_client/: simple_login_client.vcproj
trunk/client/src/: CActorProxy.cpp  CAnimationClip.h  CCameraThird.h  CClientEventManager.cpp  CClientSimulation.cpp  CMakeLists.txt  CSimulationImpl.cpp  CSimulationImpl.h  CUserPaths.cpp  CUserPaths.h  CWWTask.cpp  CWWTask.h  globals.h  main.cpp
trunk/client/tasks/: CAnimateTask.h  CLandscapeTask.cpp  CPacsTask.h
trunk/common/: .cvsignore
trunk/common/src/: CDRMotionInterpKey.cpp  CMotionController.cpp  CMoveBackState.cpp  COrientState.cpp  CSobAddEvent.cpp  CStateManager.cpp
trunk/docs/corp/: !!README!!_Explanation_of_Documents.txt  AssignmentofCopyrightPatentsandIntellectualProperty.sxw  ConfidentialityAgreement.sxw  ConfidentialityNon-CompetitionandNon-SolicitationAgreement.sxw  ShrinkwrapSoftwareAgreement.txt
trunk/docs/devs/: general_history_timeline.htm  laurelin_bridge.txt  laurelin_sanctuary.txt  (+2 more)
trunk/server/: werewolf.sql  wwshard.sql
trunk/src/: .cvsignore  Makefile.am  Makefile.in  NeLExporter_User.nsi  Werewolf_8.sln
wwcommon/src/: CClientMotionHandler.cpp  CControllerFactory.cpp  CGameChatEvent.cpp  CGameSpawnRequestEvent.cpp  CGameUnspawnRequestEvent.cpp  CMakeLists.txt  CMotionHandler.cpp  CMotionInterpKey.cpp  CMoveFwdState.cpp  CMoveIdleState.cpp  CMovementState.cpp  COrientIdleState.cpp  COrientTurnLeftState.cpp  CPerformer.cpp  CPolynomialMotionController.cpp  CSobAddEvent.cpp  CSobChatEvent.cpp  CSobDREvent.cpp  CSobFactory.cpp  CSobHandlerFactory.cpp  CSobManager.cpp  CSobOrientEvent.cpp  CSobRemoveEvent.cpp  CSobSpawnEvent.cpp  CSobStrafeEvent.cpp  CSobUnspawnEvent.cpp  CStateManager.cpp  CStrafeLeftState.cpp  CStrafeState.cpp  CTaskManager.cpp  IGameEvent.cpp  IProperty.cpp  ISimulationObj.cpp  ISimulationState.cpp  ISobEvent.cpp  ISobStateChangeEvent.cpp  simulation.cpp  stdpch.h
wwscript/src/: CMakeLists.txt  IProperty.cpp  PropertyManager.cpp  PropertyMap.cpp  Script.cpp  ScriptArg.cpp  ScriptFunction.cpp  ScriptFunctionInstance.cpp  ScriptLoader.cpp  ScriptManager.cpp  ScriptVariable.cpp  scriptstring.cpp
(+1853 files in other folders)
