FILE(GLOB SRC *.cpp *.h)
FILE(GLOB TASK_SRC tasks/*.cpp tasks/*.h)
FILE(GLOB CTRLR_SRC controllers/*.cpp controllers/*.h)
FILE(GLOB ENTITY_SRC entities/*.cpp entities/*.h)
FILE(GLOB IFACES_SRC interfaces/*.cpp interfaces/*.h)
FILE(GLOB LISTENERS_SRC listeners/*.cpp listeners/*.h)
FILE(GLOB SELECTOR_SRC selectors/*.cpp selectors/*.h)
FILE(GLOB VIEW_SRC views/*.cpp views/*.h)
FILE(GLOB RESOURCES_RC *.rc)

DECORATE_NEL_LIB("wwcommon")
SET(WWCOMMON_LIB ${LIBNAME})

LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})

SOURCE_GROUP(Tasks FILES ${TASK_SRC})
SOURCE_GROUP(Controllers FILES ${CTRLR_SRC})
SOURCE_GROUP(Entities FILES ${ENTITY_SRC})
SOURCE_GROUP(Interfaces FILES ${IFACES_SRC})
SOURCE_GROUP(Listeners FILES ${LISTENERS_SRC})
SOURCE_GROUP(Selectors FILES ${SELECTOR_SRC})
SOURCE_GROUP(Views FILES ${VIEW_SRC})
SOURCE_GROUP(Resources FILES ${RESOURCES_RC})

ADD_EXECUTABLE(werewolf		${SRC}
							${TASK_SRC}
							${CTRLR_SRC}
							${ENTITY_SRC}
							${IFACES_SRC}
							${LISTENERS_SRC}
							${SELECTOR_SRC}
							${VIEW_SRC}
							${RESOURCES_RC})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

# On Unix we'll need to include config.h
IF(UNIX)
  INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR})
ENDIF(UNIX)


INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR} ${NELMISC_INCLUDE_DIRS} ${CEGUI_INCLUDE_DIRS} ${PYTHON_INCLUDE_PATH} ${PNG_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(werewolf	${PLATFORM_LINKFLAGS} 
								${LIBXML2_LIBRARIES} 
								${NELMISC_LIBRARY} 
								${NELPACS_LIBRARY} 
								${NELNET_LIBRARY} 
								${NELSOUND_LIBRARY} 
								${NELSNDDRV_LIBRARY} 
								${NELLIGO_LIBRARY} 
								${NELGEORGES_LIBRARY} 
								${NEL3D_LIBRARY} 
								${JPEG_LIBRARY} 
								${FREETYPE_LIBRARY} 
								${WWCOMMON_LIB} 
								${CEGUI_LIBRARY} 
								${PYTHON_LIBRARIES} 
								${Boost_LIBRARIES} 
								${PNG_LIBRARIES})
IF(WIN32)
  SET_TARGET_PROPERTIES(werewolf PROPERTIES LINK_FLAGS "/NODEFAULTLIB:libcmt /SUBSYSTEM:WINDOWS")
ENDIF(WIN32)
ADD_DEFINITIONS(${LIBXML2_DEFINITIONS})

INSTALL(TARGETS werewolf RUNTIME DESTINATION bin)
