FILE(GLOB SRC *.cpp *.h)

DECORATE_NEL_LIB("wwcommon")
SET(WWCOMMON_LIB ${LIBNAME})
DECORATE_NEL_LIB("wwscript")
SET(WWSCRIPT_LIB ${LIBNAME})

ADD_EXECUTABLE(scriptsample		${SRC})

INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR} ${NELMISC_INCLUDE_DIRS} ${CMAKE_SOURCE_DIR}/wwscript/include)
TARGET_LINK_LIBRARIES(scriptsample	${PLATFORM_LINKFLAGS} 
								${LIBXML2_LIBRARIES} 
								${NELMISC_LIBRARY} 
								${NELGEORGES_LIBRARY} 
								${WWCOMMON_LIB} 
								${WWSCRIPT_LIB})
IF(WIN32)
  SET_TARGET_PROPERTIES(scriptsample PROPERTIES LINK_FLAGS "/NODEFAULTLIB:libcmt /SUBSYSTEM:CONSOLE")
ENDIF(WIN32)
ADD_DEFINITIONS(${LIBXML2_DEFINITIONS})

INSTALL(TARGETS scriptsample RUNTIME DESTINATION bin)
