FILE(GLOB SRC *.cpp *.h)

LIST(REMOVE_ITEM SRC
	${CMAKE_CURRENT_SOURCE_DIR}/CTimeTask.h
        ${CMAKE_CURRENT_SOURCE_DIR}/CTimeTask.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/CPacsTask.h
        ${CMAKE_CURRENT_SOURCE_DIR}/CPacsTask.cpp)

ADD_EXECUTABLE(ww_frontend WIN32 ${SRC})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

# On Unix we'll need to include config.h
IF(UNIX)
  INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR})
ENDIF(UNIX)


INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR} ${NEL_INCLUDE_DIR} ${PNG_INCLUDE_DIR} ${MYSQL_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(ww_frontend	${PLATFORM_LINKFLAGS} 
								${LIBXML2_LIBRARIES} 
								${NELMISC_LIBRARY} 
								${NELPACS_LIBRARY} 
								${NELNET_LIBRARY} 
								${NELLIGO_LIBRARY} 
								${NELGEORGES_LIBRARY} 
								${NEL3D_LIBRARY} 
								${JPEG_LIBRARY} 
								${FREETYPE_LIBRARY} 
								wwcommon								
								${PNG_LIBRARIES}
								${MYSQL_LIBRARIES})
IF(WIN32)
  SET_TARGET_PROPERTIES(ww_frontend PROPERTIES 
	LINK_FLAGS_DEBUG "/NODEFAULTLIB:libc;libcmt;libcmtd;msvcrt"
	LINK_FLAGS_RELEASE "/NODEFAULTLIB:libc;libcmt;libcmtd;msvcrtd"
	PROJECT_LABEL "Service: Frontend Service")
ENDIF(WIN32)
ADD_DEFINITIONS(${LIBXML2_DEFINITIONS})

INSTALL(TARGETS ww_frontend RUNTIME DESTINATION sbin COMPONENT services)
INSTALL(FILES service_frontend.cfg DESTINATION etc/werewolf/ COMPONENT services)
