FILE(GLOB SRC *.cpp *.h)

ADD_EXECUTABLE(ww_client ${SRC})

INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR} ${NELMISC_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(ww_client ${PLATFORM_LINKFLAGS} ${LIBXML2_LIBRARIES} ${NELMISC_LIBRARY} ${NEL3D_LIBRARY} ${JPEG_LIBRARY})
ADD_DEFINITIONS(${LIBXML2_DEFINITIONS})

IF(WIN32)
  SET_TARGET_PROPERTIES(ww_client PROPERTIES COMPILE_FLAGS "/Yustdpch.h")
  SET_SOURCE_FILES_PROPERTIES(main.cpp PROPERTIES COMPILE_FLAGS "/Ycstdpch.h")
  SET_TARGET_PROPERTIES(ww_client PROPERTIES LINK_FLAGS "/NODEFAULTLIB:libcmt")
ENDIF(WIN32)


INSTALL(TARGETS ww_client RUNTIME DESTINATION bin)
