FILE(GLOB SRC *.cpp angelscript/*.cpp )
FILE(GLOB PRIV_H *.h)
FILE(GLOB PUB_H ../include/wwscript/*.h)

LIST(REMOVE_ITEM SRC	${CMAKE_CURRENT_SOURCE_DIR}/angelscript/as_callfunc_x64_gcc.cpp )

DECORATE_NEL_LIB("wwscript")
SET(WWSCRIPT_LIB ${LIBNAME})

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/wwscript/include)


IF(NOT WIN32)
  ADD_LIBRARY(${WWSCRIPT_LIB} SHARED ${SRC})
ELSE(NOT WIN32)
  ADD_LIBRARY(${WWSCRIPT_LIB} STATIC ${SRC} ${PUB_H})
ENDIF(NOT WIN32)

INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR} ${NELMISC_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${WWSCRIPT_LIB} ${NELMISC_LIBRARY})
SET_TARGET_PROPERTIES(${WWSCRIPT_LIB} PROPERTIES VERSION ${NL_VERSION})

IF(WIN32)
  SET_TARGET_PROPERTIES(${WWSCRIPT_LIB} PROPERTIES COMPILE_FLAGS "/Yustdpch.h")
  SET_SOURCE_FILES_PROPERTIES(stdpch.cpp PROPERTIES COMPILE_FLAGS "/Ycstdpch.h")
  SET_TARGET_PROPERTIES(${WWSCRIPT_LIB} PROPERTIES LINK_FLAGS "/NODEFAULTLIB:libcmt")
ENDIF(WIN32)

ADD_DEFINITIONS(${LIBXML2_DEFINITIONS})

INSTALL(TARGETS ${WWSCRIPT_LIB} LIBRARY DESTINATION lib ARCHIVE DESTINATION lib COMPONENT libraries)
