#
# $Id: Makefile.am,v 1.3 2002-04-10 07:32:46 lecroart Exp $
#

clientdir		= ${database}/data/anims
client_DATA		= gnu_all.swt		\
			  gnu_bottom.swt	\
			  gnu.skel		\
			  gnu_top.swt		\
			  idle.anim		\
			  impact.anim		\
			  lancelaboule.anim	\
			  log_off.anim		\
			  log_on.anim		\
			  marche.anim		\
			  patterfeet.anim	\
			  prepaboule.anim	\
			  prepaboulecycle.anim


# End of Makefile.am
